--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
         <div class="card">
             <h2>Legal Documents</h2>
             <div class="links">
-                <a href="privacy.md">
+                <a href="privacy">
                     <svg viewBox="0 0 24 24"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
                     Privacy Policy
                 </a>
-                <a href="terms.md">
+                <a href="terms">
                     <svg viewBox="0 0 24 24"><path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/></svg>
                     Terms of Service
                 </a>
